--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,31 +1,31 @@
 ---
-import background from '../assets/background.svg';
+
 ---
 
 <footer id="footer">
   <ul>
-  <li>Footer goes in here.</li>
-  <li>Contact info?</li>
-  <li>Mailing list?</li>
-</ul>
+    <li>Footer goes in here.</li>
+    <li>Contact info?</li>
+    <li>Mailing list?</li>
+  </ul>
 </footer>
 
 <style>
-	#footer {
-    backdrop-filter: saturate(0.25);
-    margin-top: 50px;
+  #footer {
+    box-sizing: border-box;
+    background-color: var(--accent-color);
     position: relative;
-    padding: 24px;
+    padding: var(--inner-margin);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
   }
 
   #footer ul {
     display: flex;
     list-style-type: none;
-    gap:50px;
+    gap: 50px;
   }
-
 </style>
