--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,92 +1,67 @@
 ---
-import background from '../assets/background.svg';
+import Notebox from "./Notebox.astro";
 ---
 
-<div id="container">
-	<img id="background" src={background.src} alt="" fetchpriority="high" />
-	<main>
-		<section id="hero">
-			<h1><a href="https://tapestries.media"
-				>Tapestries</a
-			></h1>
-			<h2>
-				An Internet Archive Project
-			</h2>
-      <h3>Tagline goes here?</h3>
-		</section>
-    <div id="notebox"><p>(Note what happens when you use the scrollwheel or two-fingered scroll to scroll down.)</p></div>
-    <section>
-      <h3>A sample tapestry:</h3>
-      <iframe src="https://tapestries.asteasolutions.net/t/9131764f-a66d-4eee-b950-c6bda68138b7" width="1024" height="768" allow="fullscreen" title="Tapestry new tapestry" frameborder="0" />
-    </section>
-    <section>
-      <h3>Another:</h3>
-      <iframe src="https://tapestries.asteasolutions.net/t/ee1c0734-7f89-4124-9388-17544effa55c" width="1024" height="768" allow="fullscreen" title="Tapestry new tapestry" frameborder="0" />
-
-    </section>
-	</main>
-</div>
+<header id="hero">
+  <h1><a href="https://tapestries.media">Tapestries</a></h1>
+  <h2>An Internet Archive Project</h2>
+  <h3>Tagline goes here?</h3>
+  <div id="onmobile">
+    <Notebox
+      >Note that right now tapestries don't work very well on mobile! Look at
+      this site on a computer for the full effect.</Notebox
+    >
+  </div>
+</header>
 
 <style>
-	#background {
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: -1;
-		filter: blur(20px);
-	}
-
-	#container {
-		/* height: 100%; */
-	}
-
-	main {
-		height: 100%;
-		display: flex;
-		align-items: center;
+  section {
+    display: flex;
     flex-direction: column;
-	}
+    align-items: center;
+  }
 
-	#hero {
-		display: flex;
-		align-items: start;
-		flex-direction: column;
-		align-items: center;
-		padding: 16px;
-    margin-bottom: 64px;
-	}
+  #hero {
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    align-items: center;
+    padding: var(--inner-margin);
+    border-bottom: 4px dotted var(--accent-color);
+    --header-size: 10vw;
+    @media screen and (max-width: 1023px) {
+      --header-size: 72px;
+    }
+  }
 
-	h1 {
-		font-size: 64px;
+  h1 {
+    font-size: var(--header-size);
     line-height: 1;
     margin: 0;
-	}
+    font-weight: normal;
+  }
 
   h1 a {
     text-decoration: none;
-    color: black;
+    color: var(--text-color);
   }
 
   h2 {
+    font-size: calc(var(--header-size) * 0.4);
     font-style: italic;
+    font-weight: normal;
+    color: var(--accent-color);
+    text-align: center;
   }
 
   h3 {
     text-align: center;
   }
 
-  #notebox {
-    background-color: yellow;
-    border: 1px solid black;
-    padding: 16px;
+  #onmobile {
+    display: none;
+    @media screen and (max-width: 1023px) {
+      display: block;
+    }
   }
-
-  #notebox p {
-    margin: 0;
-    font-style: italic;
-    color: #444;
-  }
-
 </style>
