added what can you do

--- a/src/components/SampleTapestries.astro
+++ b/src/components/SampleTapestries.astro
@@ -3,11 +3,12 @@ import Notebox from "./Notebox.astro";
 ---
 
 <section>
+  <h2>What's a tapestry?</h2>
   <Notebox>
     (Note what happens when you use the scrollwheel or two-fingered scroll to
     scroll down.)
   </Notebox>
-  <h3>A sample tapestry:</h3>
+  <h3>Here's a sample tapestry:</h3>
   <iframe
     src="https://tapestries.asteasolutions.net/t/9131764f-a66d-4eee-b950-c6bda68138b7"
     width="1024"
@@ -15,7 +16,7 @@ import Notebox from "./Notebox.astro";
     allow="fullscreen"
     title="Tapestry new tapestry"
     frameborder="0"></iframe>
-  <h3>Another:</h3>
+  <h3>Here's another one:</h3>
   <iframe
     src="https://tapestries.asteasolutions.net/t/ee1c0734-7f89-4124-9388-17544effa55c"
     width="1024"
