--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Welcome from "../components/Welcome.astro";
 import SampleTapestries from "../components/SampleTapestries.astro";
 import JoinAlpha from "../components/JoinAlpha.astro";
+import WhatCanYouDo from "../components/WhatCanYouDo.astro";
 import Layout from "../layouts/Layout.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -11,5 +12,6 @@ import Layout from "../layouts/Layout.astro";
 <Layout>
   <Welcome />
   <SampleTapestries />
+  <WhatCanYouDo />
   <JoinAlpha />
 </Layout>
