--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,10 @@
 
 <footer id="footer">
   <ul>
-    <li>Footer goes in here.</li>
     <li>Contact info?</li>
     <li>Mailing list?</li>
+    <li>Terms & conditions</li>
+    <li>Privacy policy</li>
   </ul>
 </footer>
 
