--- a/src/components/JoinAlpha.astro
+++ b/src/components/JoinAlpha.astro
@@ -7,12 +7,4 @@
   <p>If you want to do this...</p>
 </section>
 
-<style>
-  section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: var(--inner-margin);
-    border-top: 4px dotted var(--accent-color);
-  }
-</style>
+<style></style>
