--- a/src/components/WhatCanYouDo.astro
+++ b/src/components/WhatCanYouDo.astro
@@ -12,12 +12,4 @@
   </ul>
 </section>
 
-<style>
-  section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: var(--inner-margin);
-    border-top: 4px dotted var(--accent-color);
-  }
-</style>
+<style></style>
