--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,10 @@ import Footer from "../components/Footer.astro";
     --inner-margin: 32px;
     color: var(--text-color);
     background-color: var(--background-color);
+    --header-size: 10vw;
+    --font-size: 20px;
     @media screen and (max-width: 1023px) {
+      --header-size: 72px;
       --outer-margin: 32px;
       --inner-margin: 16px;
     }
@@ -57,5 +60,34 @@ import Footer from "../components/Footer.astro";
     background-color: var(--background-color);
     box-sizing: border-box;
     padding: var(--outer-margin);
+  }
+
+  h2 {
+    font-size: calc(var(--header-size) * 0.4);
+    font-weight: 100;
+    color: var(--accent-color);
+    text-align: center;
+    margin: 0;
+  }
+
+  h3 {
+    text-align: center;
+    font-size: 36px;
+  }
+
+  section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: var(--outer-margin) var(--inner-margin);
+    border-top: 4px dotted var(--accent-color);
+  }
+
+  p,
+  ul,
+  li {
+    font-size: var(--font-size);
+    line-height: 1.333;
   }
 </style>
