added backdrop component

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -15,12 +15,6 @@ import Notebox from "./Notebox.astro";
 </header>
 
 <style>
-  section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
   #hero {
     width: 100%;
     display: flex;
@@ -28,6 +22,7 @@ import Notebox from "./Notebox.astro";
     flex-direction: column;
     align-items: center;
     padding: var(--inner-margin);
+    box-sizing: border-box;
   }
 
   h1 {
