a lot of cleaning

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,6 +15,7 @@
   #footer {
     box-sizing: border-box;
     background-color: var(--accent-color);
+    color: var(--background-color);
     position: relative;
     padding: var(--inner-margin);
     display: flex;
@@ -23,6 +24,8 @@
     align-items: center;
     width: 100%;
     z-index: 2;
+    border-bottom-left-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
   }
 
   #footer ul {
