--- a/src/components/SampleTapestries.astro
+++ b/src/components/SampleTapestries.astro
@@ -4,7 +4,8 @@ import Notebox from "./Notebox.astro";
 
 <section>
   <h2>What's a tapestry?</h2>
-  <Notebox>
+  <Notebox> Sample video goes here </Notebox>
+  <!-- <Notebox>
     (Note what happens when you use the scrollwheel or two-fingered scroll to
     scroll down.)
   </Notebox>
@@ -23,13 +24,13 @@ import Notebox from "./Notebox.astro";
     height="768"
     allow="fullscreen"
     title="Tapestry new tapestry"
-    frameborder="0"></iframe>
+    frameborder="0"></iframe> -->
 </section>
 
 <style>
-  section {
+  /* section {
     @media screen and (max-width: 1024px) {
       padding: var(--inner-margin) 0;
     }
-  }
+  } */
 </style>
