--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Welcome from "../components/Welcome.astro";
 import SampleTapestries from "../components/SampleTapestries.astro";
 import JoinAlpha from "../components/JoinAlpha.astro";
 import WhatCanYouDo from "../components/WhatCanYouDo.astro";
+import History from "../components/History.astro";
 import Layout from "../layouts/Layout.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -13,5 +14,6 @@ import Layout from "../layouts/Layout.astro";
   <Welcome />
   <SampleTapestries />
   <WhatCanYouDo />
+  <History />
   <JoinAlpha />
 </Layout>
