--- a/src/components/Backdrop.astro
+++ b/src/components/Backdrop.astro
@@ -28,7 +28,7 @@
             const y = Math.random() * height;
 
             ctx.beginPath();
-            ctx.strokeStyle = `rgba(${Math.floor(Math.random() * 255)},${Math.floor(Math.random() * 255)}, ${Math.floor(Math.random() * 255)},0.33)`;
+            ctx.strokeStyle = `rgba(${Math.floor(Math.random() * 255)},${Math.floor(Math.random() * 255)}, ${Math.floor(Math.random() * 255)},0.2)`;
             ctx.lineWidth = Math.floor(Math.random() * 5) + 1;
             ctx.moveTo(x, 0);
             ctx.lineTo(x, height);
@@ -36,7 +36,7 @@
             const vline = await delay(delayVal);
 
             ctx.beginPath();
-            ctx.strokeStyle = `rgba(${Math.floor(Math.random() * 255)},${Math.floor(Math.random() * 255)}, ${Math.floor(Math.random() * 255)}, 0.33)`;
+            ctx.strokeStyle = `rgba(${Math.floor(Math.random() * 255)},${Math.floor(Math.random() * 255)}, ${Math.floor(Math.random() * 255)}, 0.2)`;
             ctx.lineWidth = Math.floor(Math.random() * 5) + 1;
             ctx.moveTo(0, y);
             ctx.lineTo(width, y);
@@ -59,8 +59,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    /* background-color: white; */
     z-index: 1;
+    /* opacity: 0.75; */
   }
 
   #canvas {
