--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import Footer from "../components/Footer.astro";
 import Backdrop from "../components/Backdrop.astro";
-import backdrop from "../js/backdrop.js";
 ---
 
 <!doctype html>
@@ -13,7 +12,7 @@ import backdrop from "../js/backdrop.js";
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
     <meta name="generator" content={Astro.generator} />
@@ -35,18 +34,20 @@ import backdrop from "../js/backdrop.js";
     margin: 0;
     width: 100%;
     height: 100%;
-    font-family: "Josefin Sans", sans-serif;
+    font-family: "Plus Jakarta Sans", sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
-    --background-color: rgba(0, 0, 0, 0.95);
-    --text-color: #fff;
-    --accent-color: magenta;
+    --text-color: rgba(0, 0, 0, 0.95);
+    --backdrop-color: black;
+    --background-color: #fff;
+    --accent-color: rgb(19, 72, 237);
     --outer-margin: 64px;
     --inner-margin: 32px;
+    --border-radius: 8px;
     color: var(--text-color);
-    background-color: blue;
+    background-color: var(--backdrop-color);
     --header-size: 10vw;
     --font-size: 20px;
     @media screen and (max-width: 1023px) {
@@ -65,18 +66,21 @@ import backdrop from "../js/backdrop.js";
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-color: var(--background-color);
+    background-color: transparent; /*var(--backdrop-color); */
     box-sizing: border-box;
     padding: var(--inner-margin);
     z-index: 2;
+    border-top-left-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
   }
 
   h2 {
     font-size: calc(var(--header-size) * 0.4);
     font-weight: 100;
     color: var(--accent-color);
-    text-align: center;
+    /* text-align: center; */
     margin: 0;
+    margin-right: auto;
   }
 
   h3 {
@@ -89,11 +93,28 @@ import backdrop from "../js/backdrop.js";
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: var(--outer-margin) var(--inner-margin);
-    border-top: 4px dotted var(--accent-color);
+    background-color: var(--background-color);
+    padding: var(--inner-margin);
     box-sizing: border-box;
+    max-width: 75%;
+    margin-bottom: var(--outer-margin);
+    border-radius: var(--border-radius);
+    box-shadow: 0 0 10px orange;
   }
 
+  section:nth-child(odd) {
+    margin-left: auto;
+  }
+
+  section:nth-child(even) {
+    margin-right: auto;
+  }
+
+  @media screen and (max-width: 1023px) {
+    section {
+      max-width: 100%;
+    }
+  }
   p,
   ul,
   li {
