--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -37,6 +37,7 @@ import Notebox from "./Notebox.astro";
     /* max-width: 50%; */
     border-radius: var(--border-radius);
     box-shadow: 0 0 10px orange;
+    border: 6px solid orange;
   }
 
   h1 {
@@ -56,6 +57,8 @@ import Notebox from "./Notebox.astro";
     font-size: calc(var(--header-size) * 0.15);
     font-weight: 800;
     letter-spacing: 3px;
+    text-align: center;
+    margin: 0 auto;
   }
 
   h3 {
