--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -100,6 +100,7 @@ import Backdrop from "../components/Backdrop.astro";
     margin-bottom: var(--outer-margin);
     border-radius: var(--border-radius);
     box-shadow: 0 0 10px orange;
+    border: 6px solid orange;
   }
 
   section:nth-child(odd) {
