--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,8 +24,8 @@
     align-items: center;
     width: 100%;
     z-index: 2;
-    border-bottom-left-radius: var(--border-radius);
-    border-bottom-right-radius: var(--border-radius);
+    border-radius: var(--border-radius);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
   }
 
   #footer ul {
