--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,7 @@
     width: 100%;
     z-index: 2;
     border-radius: var(--border-radius);
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    /* box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); */
   }
 
   #footer ul {
