--- a/src/components/SampleTapestries.astro
+++ b/src/components/SampleTapestries.astro
@@ -3,7 +3,7 @@ import Notebox from "./Notebox.astro";
 ---
 
 <section>
-  <h2>What's a tapestry?</h2>
+  <h2>What’s a tapestry?</h2>
   <Notebox> Sample video goes here </Notebox>
   <!-- <Notebox>
     (Note what happens when you use the scrollwheel or two-fingered scroll to
