--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -3,45 +3,55 @@ import Notebox from "./Notebox.astro";
 ---
 
 <header id="hero">
-  <h1>
-    <a href="https://tapestries.media"
-      ><img
-        src="tapestrylogo.svg"
-        alt="Tapestries"
-        width="500"
-        height="auto"
-      /></a
-    >
-  </h1>
-  <h2>An initiative of the Internet Archive</h2>
-  <h3>Tagline goes here?</h3>
-  <div id="onmobile">
-    <Notebox
-      >Note that right now tapestries don't work very well on mobile! Look at
-      this site on a computer for the full effect.</Notebox
-    >
+  <div>
+    <h1>
+      <a href="https://tapestries.media"
+        ><img
+          src="tapestrylogo.svg"
+          alt="Tapestries"
+          width="400"
+          height="auto"
+        /></a
+      >
+    </h1>
+    <h2>An initiative of the Internet Archive</h2>
+  </div>
+  <div>
+    <h3>Tagline goes here?</h3>
+    <div id="onmobile">
+      <Notebox
+        >Note that right now tapestries don't work very well on mobile! Look at
+        this site on a computer for the full effect.</Notebox
+      >
+    </div>
   </div>
 </header>
 
 <style>
   #hero {
-    width: 100%;
+    width: calc(100% + 2 * var(--outer-margin));
     display: flex;
     align-items: start;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    padding: var(--inner-margin);
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    margin-left: calc(0px - var(--outer-margin));
+    margin-right: calc(0px - var(--outer-margin));
+    margin-top: calc(0px - var(--outer-margin));
+    padding: var(--inner-margin) var(--outer-margin);
     box-sizing: border-box;
-    background-color: var(--background-color);
+    background-color: rgba(255, 255, 255, 0.95);
     margin-bottom: var(--outer-margin);
     /* max-width: 50%; */
-    border-radius: var(--border-radius);
-    box-shadow: 0 0 10px orange;
-    border: 6px solid orange;
+    /* box-shadow: 0 0 10px orange; */
+    border-bottom: 6px solid orange;
+    z-index: 3;
   }
 
   h1 {
-    font-size: var(--header-size);
+    font-size: 0;
     line-height: 1;
     margin: 0;
     font-weight: normal;
@@ -53,8 +63,9 @@ import Notebox from "./Notebox.astro";
   }
 
   h2 {
+    padding-top: calc(var(--inner-margin) / 2);
     text-transform: uppercase;
-    font-size: calc(var(--header-size) * 0.15);
+    font-size: calc(var(--font-size) * 0.85);
     font-weight: 800;
     letter-spacing: 3px;
     text-align: center;
