--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Welcome from "../components/Welcome.astro";
 import Footer from "../components/Footer.astro";
 import Backdrop from "../components/Backdrop.astro";
 ---
@@ -20,6 +21,7 @@ import Backdrop from "../components/Backdrop.astro";
   </head>
   <body>
     <Backdrop />
+    <Welcome />
     <main>
       <slot />
     </main>
@@ -45,11 +47,11 @@ import Backdrop from "../components/Backdrop.astro";
     --accent-color: rgb(19, 72, 237);
     --outer-margin: 64px;
     --inner-margin: 32px;
-    --border-radius: 8px;
-    color: var(--text-color);
-    background-color: var(--backdrop-color);
+    --border-radius: 16px;
     --header-size: 10vw;
     --font-size: 20px;
+    color: var(--text-color);
+    background-color: var(--backdrop-color);
     @media screen and (max-width: 1023px) {
       --header-size: 72px;
       --outer-margin: 32px;
@@ -99,7 +101,7 @@ import Backdrop from "../components/Backdrop.astro";
     max-width: 75%;
     margin-bottom: var(--outer-margin);
     border-radius: var(--border-radius);
-    box-shadow: 0 0 10px orange;
+    /* box-shadow: 0 0 10px orange; */
     border: 6px solid orange;
   }
 
@@ -109,6 +111,10 @@ import Backdrop from "../components/Backdrop.astro";
 
   section:nth-child(even) {
     margin-right: auto;
+  }
+
+  section h2 {
+    font-weight: 700;
   }
 
   @media screen and (max-width: 1023px) {
